salesforce/force-app/main/default/objects/Case/fields/CustomerSatisfactionRating__c.field-meta.xml
<CustomField>
    <fullName>CustomerSatisfactionRating__c</fullName>
    <description>CSAT rating provided by the customer.</description>
    <inlineHelpText>Enter a numeric rating or select a satisfaction level.</inlineHelpText>
    <label>Customer Satisfaction Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>