salesforce/force-app/main/default/objects/Case/fields/NextRecommendedService__c.field-meta.xml
<CustomField>
    <fullName>NextRecommendedService__c</fullName>
    <description>Recommended next service or maintenance item.</description>
    <inlineHelpText>Enter the recommended service action (e.g., Oil Change).</inlineHelpText>
    <label>Next Recommended Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>