salesforce/force-app/main/default/objects/Case/fields/ServiceAdvisor__c.field-meta.xml
<CustomField>
    <fullName>ServiceAdvisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advisor responsible for this case.</description>
    <inlineHelpText>Lookup the assigned service advisor User.</inlineHelpText>
    <label>Service Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Advisor)</relationshipLabel>
    <relationshipName>Cases_ServiceAdvisor</relationshipName>
    <type>Lookup</type>
</CustomField>