salesforce/force-app/main/default/objects/Case/fields/WarrantyWork__c.field-meta.xml
<CustomField>
    <fullName>WarrantyWork__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags whether work is covered by warranty.</description>
    <inlineHelpText>Check if the service is performed under warranty.</inlineHelpText>
    <label>Warranty Work</label>
    <type>Checkbox</type>
</CustomField>